image and button upgrades

--- a/index.html
+++ b/index.html
@@ -169,6 +169,12 @@
         <div class="featured__img_container">
           <img src="images/featured/six.png" alt="My Projects"> 
         </div>
+        <div class="featured__img_container">
+          <img src="images/featured/seven.png" alt="My Projects"> 
+        </div>
+        <div class="featured__img_container">
+          <img src="images/featured/eight.png" alt="My Projects"> 
+        </div>
       </div>
     </section>
     <section id="projects" class="projects container section">
@@ -185,7 +191,7 @@
 
         <div class="projects__wraps">
           <div class="projects__item projects__img project__image1">
-            <img src="images/Featured/one.png">
+            <img src="images/projects/one.png">
           </div>
           <div class="projects__item project__content1">
             <h4>
@@ -202,7 +208,7 @@
         </div>
         <div class="projects__wraps">
           <div class="projects__item projects__img project__image2">
-            <img src="images/Featured/two.png">
+            <img src="images/projects/two.png">
           </div>
           <div class="projects__item project__content2">
             <h4>
@@ -219,7 +225,7 @@
         </div>
         <div class="projects__wraps">
           <div class="projects__item projects__img project__image3">
-            <img src="images/Featured/three.png">
+            <img src="images/projects/three.png">
           </div>
           <div class="projects__item project__content3">
             <h4>
@@ -236,7 +242,7 @@
         </div>
         <div class="projects__wraps">
           <div class="projects__item projects__img project__image4">
-            <img src="images/Featured/four.png">
+            <img src="images/projects/four.png">
           </div>
           <div class="projects__item project__content4">
             <h4>
@@ -253,7 +259,7 @@
         </div>
         <div class="projects__wraps">
           <div class="projects__item projects__img project__image5">
-            <img src="images/Featured/five.png">
+            <img src="images/projects/five.png">
           </div>
           <div class="projects__item project__content5">
             <h4>
