--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
   <header class="header container">
     <nav>
       <ul class="header__menu">
-        <li ><a class="header__links" href="#about"> About</a></li>
+        <li ><a class="header__links" href="#about">About</a></li>
         <li ><a class="header__links" href="#featured">Work</a></li>
         <li ><a class="header__links" href="#projects">Projects</a></li>
         <li><a class="header__links" href="#contact">Contact</a></li>
         <li class="header__line"></li>
         <li>
           <button class="header__sun">
-            <i class="material-icons">light_mode</i>
+            <i class="material-icons header_sun">light_mode</i>
           </button>
         </li>
         <li>
@@ -274,6 +274,23 @@
             <button class="btn">Website</button>
           </div>
         </div>
+        <div class="projects__wraps">
+          <div class="projects__item projects__img project__image6">
+            <img src="images/projects/six.png">
+          </div>
+          <div class="projects__item project__content6">
+            <h4>
+              Dark Waves
+            </h4>
+            <p>
+              Lorem ipsum dolor, sit amet coning elit. Doloribus, ipsam. Consequuntur dolorem es at esse magnam suscipit quidem?
+            </p>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis cumque iure atque, aliquam itaque, autem voluptas minima sint tenetur et nam natus optio repellendus ex reprehenderit corporis temporibus a id!
+            </p>
+            <button class="btn">Website</button>
+          </div>
+        </div>
       </div>
     </section>
     <section  id="contact" class="contact container section">
@@ -283,7 +300,7 @@
       <p>
         I'd love to heat from you! Whether you have question, feedback, or just want to connect, feel free to reach out using the mail below.
       </p>
-      <a href="#"   class="contact__btn btn ">
+      <a href="mailto:naman.gupta.1793@gmail.com" target="_blank" class="contact__btn btn ">
         Contact Me
       </a>
     </section>
