updating user image and about section image

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
    <!-- End of Mobile Navigation -->
   <main>
     <section class="hero section container">
-      <img class="hero__user__image" src="images/user.png" alt="Profile Picture" >
+      <img class="hero__user__image" src="images/user.jpg" alt="Profile Picture" >
       <h1 class="hero__heading">
         Hi! <br>I am Naman Gupta
       </h1>
@@ -103,7 +103,7 @@
       </div>
       </div>
       <div class="about__image">
-        <img class="about_image" src="images/user.png" alt="My picture">
+        <img class="about_image" src="images/about.jpg" alt="My picture">
       </div>
     </section>
     <section id="featured" class="featured section container" >
