--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link href="https://api.fontshare.com/v2/css?f[]=general-sans@400,500,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style/style.css">
   <link rel="stylesheet" href="style/components/header.css">
   <link rel="stylesheet" href="style/components/mobile.css">
