--- a/index.html
+++ b/index.html
@@ -159,22 +159,22 @@
           <img src="images/Featured/two.png" alt="My Projects"> 
         </div>
         <div class="featured__img_container">
-          <img src="images/featured/three.png" alt="My Projects"> 
+          <img src="images/Featured/three.png" alt="My Projects"> 
         </div>
         <div class="featured__img_container">
-          <img src="images/featured/four.png" alt="My Projects"> 
+          <img src="images/Featured/four.png" alt="My Projects"> 
         </div>
         <div class="featured__img_container">
-          <img src="images/featured/five.png" alt="My Projects"> 
+          <img src="images/Featured/five.png" alt="My Projects"> 
         </div>
         <div class="featured__img_container">
-          <img src="images/featured/six.png" alt="My Projects"> 
+          <img src="images/Featured/six.png" alt="My Projects"> 
         </div>
         <div class="featured__img_container">
-          <img src="images/featured/seven.png" alt="My Projects"> 
+          <img src="images/Featured/seven.png" alt="My Projects"> 
         </div>
         <div class="featured__img_container">
-          <img src="images/featured/eight.png" alt="My Projects"> 
+          <img src="images/Featured/eight.png" alt="My Projects"> 
         </div>
       </div>
     </section>
